# varnish-mmdb-vmod

./: Makefile.am  README.md  configure.ac  libmaxminddb.spec  mmdb-vmod.spec  varnish-cache.spec
src/: Makefile.am  geo_functions.c  vmod_geo.c  vmod_geo.h  vmod_geo.vcc
tests/: Makefile.am  testrunner  tests.c
